@startuml 05_concrete_functions
title 구체 함수 10종 — 상속 트리와 도함수 성분 유형\n(유형색 = D1 지도 — functions.py 모듈 docstring 참조)

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam class {
  BackgroundColor #FDFDFD
  ArrowColor #444444
}

' ===== 부모 =====
abstract class Function {
  + apply : 순수 수학 hook
  + derivative : 도함수 hook
  + backward : df(x) * upstream
  (부모가 곱셈 대행 — 자식은 공식만)
}

' ===== ① 상수형 (도함수 = 상수, 인자 무시) =====
package "① 상수형" #EEEEEE {
  class Add {
    + apply : x0 + x1
    + derivative : (1, 1)
    step11 — 다변수 첫 함수
  }
  class Sub {
    + apply : x0 - x1
    + derivative : (1, -1)
    step22 — 비교환 (rsub 필요)
  }
  class Neg {
    + apply : -x
    + derivative : -1
    step22 — ★ step34 버그의 주인공
    (원 함수 -x를 도함수 자리에
    쓴 버그가 은닉 — 회귀 테스트 봉인)
  }
}

' ===== ② 입력형 (자기 입력의 함수 — 관습 준수) =====
package "② 입력형" #E8F5E9 {
  class Square {
    + apply : x²
    + derivative : 2x
    step02 — 원조 (첫 Function)
  }
  class Sin {
    + apply : np.sin(x)
    + derivative : cos(x)
    step27 — 첫 수학 함수
  }
  class Cos {
    + apply : np.cos(x)
    + derivative : -sin(x)
    step32 — v2 신규 (sin 고차 미분용)
  }
  class Pow {
    + apply : x**c
    + derivative : c·x^(c-1)
    step22 — 파라미터 c 보유
    (dot_label 오버라이드 — 시각화에 c 표시)
  }
}

' ===== ③ 형제 입력 의존 (관습 위반 — 클로저 캡처) =====
package "③ 형제 의존" #FFF3E0 {
  class Mul {
    + apply : x0 * x1
    + derivative : (x1, x0)
    step20 — 연산자 오버로딩 주인공
    ★ 도함수가 형제 값 필요
    (self.inputs 클로저 캡처)
  }
  class Div {
    + apply : x0 / x1
    + derivative : (1/x1, -x0/x1²)
    step22 — 가장 복잡한 도함수 (제곱 항)
    ★ gradient check 최우선이었던 함수
  }
}

' ===== ④ 출력형 (forward 출력 재사용) =====
package "④ 출력형" #F3E5F5 {
  class Tanh {
    + apply : np.tanh(x)
    + derivative : 1 - tanh(x)²
    step35 — 자기 참조 도함수
    ★ 유일하게 구현 2전략:
    재호출(관습 준수, 그래프 폭증)
    vs 재사용(1-y·y, Config.reuse_output)
  }
}

' ===== 상속 =====
Add -up-|> Function
Sub -up-|> Function
Neg -up-|> Function
Square -up-|> Function
Sin -up-|> Function
Cos -up-|> Function
Pow -up-|> Function
Mul -up-|> Function
Div -up-|> Function
Tanh -up-|> Function

' ===== 유형별 행 분리 (hidden 수평 체인) =====
Add -[hidden]right- Sub
Sub -[hidden]right- Neg
Square -[hidden]right- Sin
Sin -[hidden]right- Cos
Cos -[hidden]right- Pow
Mul -[hidden]right- Div

note as Spectrum
  <b>도함수 참조 스펙트럼 (탐구 노트 35 §5)</b>
  ① 아무것도 안 봄 (상수) → ② 자기 입력
  → ③ 형제 입력 ★ hook의 마지노선
  → ④ forward 출력 → ⑤ upstream (gy 자체)
  ⑤부터는 hook 불가 — backward 직접 오버라이드
  (4고지 MatMul: gx = gy·Wᵀ)
end note
Spectrum -[hidden]right- Tanh
@enduml
